[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[workspace]

[dev-dependencies]
tokio = { version = "0.2.0", path = "../tokio", features = ["full"] }
tokio-util = { version = "0.2.0", path = "../tokio-util", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.0"
time = "0.1"
copy_in_place = "0.2.1"
tini = "0.2.0"
rust-ini = "0.14.0"
log = { version = "^0.4.5", features = ["std"] }
simple_logger="1.6.0"
simplelog = "^0.7.4"
console="0.10.0"

[[example]]
name = "chat"
path = "chat.rs"

[[example]]
name = "connect"
path = "connect.rs"

[[example]]
name = "echo-udp"
path = "echo-udp.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "print_each_packet"
path = "print_each_packet.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "tinydb"
path = "tinydb.rs"

[[example]]
name = "udp-client"
path = "udp-client.rs"

[[example]]
name = "udp-codec"
path = "udp-codec.rs"

[[example]]
name = "tinyhttp"
path = "tinyhttp.rs"


[[example]]
name = "net_server"
path = "net_server.rs"

[[example]]
name = "center_server"
path = "center_server.rs"

[[example]]
name = "center_server_packet_string"
path = "center_server_packet_string.rs"

[[example]]
name = "center_server_packet_vec"
path = "center_server_packet_vec.rs"

[[example]]
name = "center_server_packet_bytes"
path = "center_server_packet_bytes.rs"

[[example]]
name = "center_server_echo"
path = "center_server_echo.rs"
